module(
    name = "puava",
    version = "0.1.0",
)

# --- C/C++ Dependencies ---
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

# --- Python Dependencies ---
bazel_dep(name = "rules_python", version = "0.40.0")

# Register a Python toolchain (Python 3.11)
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    python_version = "3.11",
)
