[project]
name = "puava"
version = "0.1.0"
description = "a ployglot library of core data structures & algorithms"
authors = [
    {name = "Samuel Raphael",email = "samueloraphael@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "mypy (>=1.18.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false


[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
