load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "tests",
    srcs = glob(["*.cc"]),
    deps = [
        "//c/src/greet:greet",
        "//c/src/vector:vector",
        "//c/src/linkedlist:slinkedlist",
        "//c/src/stack:llstack",
        "//c/src/stack:arrstack",
        "//c/src/queue:circular_buffer",
        "@googletest//:gtest_main",
    ],
)
