load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "circular_buffer",
    srcs = ["circular_buffer.c"],
    hdrs = ["//c/includes:circular_buffer.h"],
    strip_include_prefix = "//c",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "llqueue",
    srcs = ["llqueue.c"],
    hdrs = ["//c/includes:llqueue.h"],
    strip_include_prefix = "//c",
    visibility = ["//visibility:public"],
    deps = ["//c/src/linkedlist:slinkedlist"],
)
